# rainclear-rs

./: .env.example  Cargo.toml
src/: chat.rs  main.rs
src/chat/: groq.rs
