[package]
name = "rainclear"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
lazy_static = "1.5.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.139"

[dependencies.tokio]
version = "1.43.0"
features = ["full"]
[dependencies.serenity]
version = "0.12.4"
features = ["full"]
